add progress bar

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
         <hr/>
         <h5 id="title"></h5>
         <img id="videoImg"/>
-        
         <br/>
+      </div>
+    </div>
 
+    <br/>
+    <div class="row">
+      <div class="col-lg-6 col-sm-6" id="process">
       </div>
     </div>
 
